# json

./: .gitignore  CMakeLists.txt  README.md  Serializer.hpp  benchmark.hpp  common_serials.hpp  design.md  json.hpp
examples/: CMakeLists.txt  Vector2f.hpp  common.hpp  game_data_serializer.cpp  player_serial.cpp  vector2f_serial.cpp
examples/res/: player.json  players.json
include/: json.hpp  json_serial.hpp
source/: json.cpp
